intel/bench_214_work/extr_.linuxdriversstagingmediadavinci_vpfedm365_resizer.c_configure_resizer_out_params_with_main/log.txt
bench_214_work/extr_.linuxdriversstagingmediadavinci_vpfedm365_resizer.c_configure_resizer_out_params_with_main/extr_.linuxdriversstagingmediadavinci_vpfedm365_resizer.c_configure_resizer_out_params_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.linuxdriversstagingmediadavinci_vpfedm365_resizer.c_configure_resizer_out_params_with_main/extr_.linuxdriversstagingmediadavinci_vpfedm365_resizer.c_configure_resizer_out_params_with_main.c:53:11: error: assigning to 'struct vpfe_rsz_output_spec *' from incompatible type 'void *'
        output = output_spec;
                 ^~~~~~~~~~~
2 errors generated.
HLS FPGA Parse FAILED.
